--- a/scss/layout/_services-layout.scss
+++ b/scss/layout/_services-layout.scss
@@ -394,3 +394,8 @@
     }
 }
 
+.services__heading-flex-container {
+
+    display: flex;
+    justify-content: space-between;
+}
